<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">InstantTalk</string>

    <string name="recent">刚刚</string>
    <string name="minutes_ago">&#160;分钟前</string>
    <string name="hours_ago">&#160;小时前</string>
    <string name="day_ago">&#160;天前</string>
    <string name="year_ago">&#160;年前</string>

    <string name="user_id">用户ID:</string>
    <string name="user_name">用户名:</string>
    <string name="user_avatar">头像:</string>
    <string name="switch_avatar">换一个</string>
    <string name="modify_user_name">修改</string>
    <string name="modify_video_configs">保存配置</string>
    <string name="modify_appid_and_appsign">修改</string>
    <string name="quality_options">直播品质:</string>
    <string name="upload_log">上传日志</string>
    <string name="contact_us">联系我们</string>
    <string name="about">关于</string>
    <string name="upload_log_successfully">日志上传成功</string>
    <string name="modify_video_configs_successfully">修改直播配置成功</string>
    <string name="modify_appid_and_appsign_successfully">修改appID与签名成功</string>
    <string name="multi_users">群聊</string>
    <string name="multi_users_chat">多人文字聊天</string>
    <string name="multi_users_video_chat">多人视频聊天</string>
    <string name="select_friends">选择联系人</string>
    <string name="delete_session">删除会话</string>

    <string name="resolution_prefix">分辨率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="fps_prefix">帧率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="bitrate_prefix">码率&#160;<xliff:g id="value">%1$s</xliff:g></string>

    <string name="hint_pull_refresh">下拉刷新^_^</string>
    <string name="app_loading_more">加载中…</string>
    <string name="app_no_more_data">没有更多数据了…</string>
    <string name="log">日志</string>
    <string name="zego">ZEGO</string>
    <string name="advanced">高级</string>

    <string name="textOn">开启</string>
    <string name="textOff">关闭</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="publish_setting">设置</string>
    <string name="test_env">测试环境:</string>
    <string name="appid">appID:</string>
    <string name="appkey">appKey:</string>
    <string name="front_camera">前置摄像头</string>
    <string name="camera">开启摄像头</string>
    <string name="speaker">声音</string>
    <string name="mic">麦克风</string>
    <string name="flashlight">手电筒</string>
    <string name="background_music">伴奏</string>
    <string name="beauty">美颜</string>
    <string name="filter">滤镜</string>
    <string name="start_publishing">开始直播</string>
    <string name="request_to_join">请求连麦</string>
    <string name="stop_publishing">停止直播</string>

    <!--video chat-->
    <string name="hint">提示</string>
    <string name="someone_is_requesting_to_chat_with_you"><xliff:g id="value">%1$s</xliff:g>&#160;正在请求与你视频聊天, 是否同意?"</string>
    <string name="notification">通知</string>
    <string name="someone_requested_to_chat_with_you"><xliff:g id="value">%1$s</xliff:g>&#160;请求与你视频聊天!"</string>
    <string name="someone_sent_you_a_text_message"><xliff:g id="value">%1$s</xliff:g>&#160;给你发了一条文字消息!</string>
    <string name="Allow">同意</string>
    <string name="Deny">拒绝</string>
    <string name="do_you_really_want_to_leave_the_chat_room">确定要离开聊天室吗?</string>
    <string name="Yes">确定</string>
    <string name="No">取消</string>

    <string name="please_wait">请稍后...</string>
    <string name="live_quality">当前质量:&#160;<xliff:g id="value">%1$s</xliff:g></string>


    <!--一对一聊天中-->
    <string name="video_chat">视频聊天</string>
    <string name="start_to_group_chat">开始</string>
    <string name="cancel_group_chat">取消</string>

    <string name="myself">我:&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="waiting_for_response">等待对方同意...</string>
    <string name="someone_accepted_your_request"><xliff:g id="value">%1$s</xliff:g>:&#160;接受了你的请求!</string>
    <string name="someone_refused_your_request"><xliff:g id="value">%1$s</xliff:g>:&#160;拒绝了你的请求!</string>
    <string name="all_friends_refused_your_request">所有朋友都拒绝了你的请求!</string>

    <string name="start_to_logout_public_room">开始退出大厅房间...</string>
    <string name="logout_public_room_success">成功退出大厅房间!</string>
    <string name="start_to_login_private_room">开始登录私有房间...</string>
    <string name="start_to_login_private_room_log">开始登录私有房间(roomKey:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="login_private_room_success">登录私有房间成功!</string>
    <string name="login_private_room_success_log">登录私有房间成功(roomKey:<xliff:g id="value">%1$s</xliff:g>, serverKey:<xliff:g id="value">%2$s</xliff:g>)</string>
    <string name="login_private_room_failed">登录私有房间失败!</string>
    <string name="login_private_room_failed_log">登录私有房间失败(roomKey:<xliff:g id="value">%1$s</xliff:g>, serverKey:<xliff:g id="value">%2$s</xliff:g>)</string>

    <string name="start_to_login_channel">开始登陆频道(channelID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="login_channel_success">登陆频道成功(channelID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="login_channel_failed">登陆频道失败(channelID:<xliff:g id="value">%1$s</xliff:g>)--errCode:<xliff:g id="value">%2$s</xliff:g></string>

    <string name="start_to_create_stream">开始创建流</string>
    <string name="create_stream_success">创建流流成功(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="create_stream_fail">创建流流失败(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="someone_created_stream"><xliff:g id="value">%1$s</xliff:g>:&#160;创建了流(streamID:<xliff:g id="value">%2$s</xliff:g>)</string>
    <string name="someone_deleted_stream"><xliff:g id="value">%1$s</xliff:g>:&#160;删除了流(streamID:<xliff:g id="value">%2$s</xliff:g>)</string>

    <string name="start_to_publish_stream">开始发布流(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="stop_publising_stream">停止发布流(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="publish_stream_success">发布流成功(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="publish_stream_failed">发布流失败(streamID:<xliff:g id="value">%1$s</xliff:g>)--errCode:<xliff:g id="value">%2$s</xliff:g></string>

    <string name="start_to_play_stream">开始播放流(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="stop_playing_stream">停止播放流(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="play_stream_success">播放流成功(streamID:<xliff:g id="value">%1$s</xliff:g>)</string>
    <string name="play_stream_failed">播放流失败(streamID:<xliff:g id="value">%1$s</xliff:g>)--errCode:<xliff:g id="value">%2$s</xliff:g></string>

    <string name="chatting">视频通话中...</string>
    <string name="chat_finished">通话结束</string>
    <string name="someone_has_entered_the_room"><xliff:g id="value">%1$s</xliff:g>:&#160;进入了房间</string>
    <string name="someone_has_left_the_room"><xliff:g id="value">%1$s</xliff:g>:&#160;离开了房间</string>
    <string name="all_friends_have_left_the_room">所有朋友都离开了房间!</string>
    <string name="you_have_disconnected">你已经掉线了!</string>

    <string name="setting_item_version">VERSION</string>
    <string name="setting_item_account">ACCOUNT</string>
    <string name="setting_item_video">VIDEO</string>
    <string name="setting_item_advanced">ADVANCED</string>
    <string name="setting_item_about">ABOUT</string>
    <string name="you_can_not_send_an_empty_message">不能发送空消息</string>
    <string name="user_name_can_not_be_empty">用户名不能为空</string>
    <string name="only_n_friends_can_be_invited_one_time">一次只能邀请<xliff:g id="value">%1$s</xliff:g>个朋友</string>
    <string name="your_friend_has_canceled_the_chat">你的朋友取消了聊天</string>
</resources>
